--- a/hw03/package.json
+++ b/hw03/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^6.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "img-optimize-loader": "^1.0.7",
     "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.7",
     "sass-loader": "^12.6.0",
